// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Москва и МО проверка адреса 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Organization\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"url\\":\\"https://realty.yandex.ru\\",\\"logo\\":\\"https://realty.yandex.ru/apple-touch-icon-192x192.png\\",\\"telephone\\":\\"8 (800) 511-05-59\\",\\"sameAs\\":[\\"https://vk.com/yandex.realty\\",\\"https://ok.ru/realty.yandex\\"],\\"address\\":{\\"@type\\":\\"PostalAddress\\",\\"streetAddress\\":\\"Садовническая ул., 82, с2\\",\\"addressLocality\\":\\"Москва\\",\\"postalCode\\":\\"115035\\"},\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"reviewCount\\":115900,\\"bestRating\\":5}}",
      }
    }
    key="0"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SoftwareApplication\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"operatingSystem\\":\\"IOS\\",\\"applicationCategory\\":\\"https://schema.org/BusinessApplication\\",\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"ratingCount\\":115954}}",
      }
    }
    key="1"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SoftwareApplication\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"operatingSystem\\":\\"Android\\",\\"applicationCategory\\":\\"https://schema.org/BusinessApplication\\",\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.3,\\"ratingCount\\":19273}}",
      }
    }
    key="2"
    type="application/ld+json"
  />,
  <Memo(OrganizationComponent)
    excludeAddress={false}
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Organization"
    >
      <meta
        content="Яндекс.Недвижимость"
        itemProp="name"
      />
      <meta
        content="https://realty.yandex.ru"
        itemProp="url"
      />
      <meta
        alt="Яндекс.Недвижимость"
        itemProp="logo"
        src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
      />
      <div
        itemProp="address"
        itemScope={true}
        itemType="https://schema.org/PostalAddress"
      >
        <meta
          content="Садовническая ул., 82, с2"
          itemProp="streetAddress"
        />
        <meta
          content="Москва"
          itemProp="addressLocality"
        />
        <meta
          content="115035"
          itemProp="postalCode"
        />
      </div>
      <meta
        content="Круглосуточно"
        itemProp="openingHours"
      />
      <meta
        content="8 (800) 511-05-59"
        itemProp="telephone"
      />
    </div>
  </Memo(OrganizationComponent)>,
  <Memo(ProductComponent)
    aggregateRating={
      Object {
        "bestRating": 5,
        "ratingValue": 4.8,
        "reviewCount": 115900,
        "reviewedName": "Рейтинг сайта",
      }
    }
  />,
]
`;

exports[`Москва проверка адреса 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Organization\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"url\\":\\"https://realty.yandex.ru\\",\\"logo\\":\\"https://realty.yandex.ru/apple-touch-icon-192x192.png\\",\\"telephone\\":\\"8 (800) 511-05-59\\",\\"sameAs\\":[\\"https://vk.com/yandex.realty\\",\\"https://ok.ru/realty.yandex\\"],\\"address\\":{\\"@type\\":\\"PostalAddress\\",\\"streetAddress\\":\\"Садовническая ул., 82, с2\\",\\"addressLocality\\":\\"Москва\\",\\"postalCode\\":\\"115035\\"},\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"reviewCount\\":115900,\\"bestRating\\":5}}",
      }
    }
    key="0"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SoftwareApplication\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"operatingSystem\\":\\"IOS\\",\\"applicationCategory\\":\\"https://schema.org/BusinessApplication\\",\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"ratingCount\\":115954}}",
      }
    }
    key="1"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SoftwareApplication\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"operatingSystem\\":\\"Android\\",\\"applicationCategory\\":\\"https://schema.org/BusinessApplication\\",\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.3,\\"ratingCount\\":19273}}",
      }
    }
    key="2"
    type="application/ld+json"
  />,
  <Memo(OrganizationComponent)
    excludeAddress={false}
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Organization"
    >
      <meta
        content="Яндекс.Недвижимость"
        itemProp="name"
      />
      <meta
        content="https://realty.yandex.ru"
        itemProp="url"
      />
      <meta
        alt="Яндекс.Недвижимость"
        itemProp="logo"
        src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
      />
      <div
        itemProp="address"
        itemScope={true}
        itemType="https://schema.org/PostalAddress"
      >
        <meta
          content="Садовническая ул., 82, с2"
          itemProp="streetAddress"
        />
        <meta
          content="Москва"
          itemProp="addressLocality"
        />
        <meta
          content="115035"
          itemProp="postalCode"
        />
      </div>
      <meta
        content="Круглосуточно"
        itemProp="openingHours"
      />
      <meta
        content="8 (800) 511-05-59"
        itemProp="telephone"
      />
    </div>
  </Memo(OrganizationComponent)>,
  <Memo(ProductComponent)
    aggregateRating={
      Object {
        "bestRating": 5,
        "ratingValue": 4.8,
        "reviewCount": 115900,
        "reviewedName": "Рейтинг сайта",
      }
    }
  />,
]
`;

exports[`Не Москва или Москва и МО проверка адреса 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Organization\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"url\\":\\"https://realty.yandex.ru\\",\\"logo\\":\\"https://realty.yandex.ru/apple-touch-icon-192x192.png\\",\\"telephone\\":\\"8 (800) 511-05-59\\",\\"sameAs\\":[\\"https://vk.com/yandex.realty\\",\\"https://ok.ru/realty.yandex\\"],\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"reviewCount\\":115900,\\"bestRating\\":5}}",
      }
    }
    key="0"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SoftwareApplication\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"operatingSystem\\":\\"IOS\\",\\"applicationCategory\\":\\"https://schema.org/BusinessApplication\\",\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"ratingCount\\":115954}}",
      }
    }
    key="1"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SoftwareApplication\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"operatingSystem\\":\\"Android\\",\\"applicationCategory\\":\\"https://schema.org/BusinessApplication\\",\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.3,\\"ratingCount\\":19273}}",
      }
    }
    key="2"
    type="application/ld+json"
  />,
  <Memo(OrganizationComponent)
    excludeAddress={true}
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Organization"
    >
      <meta
        content="Яндекс.Недвижимость"
        itemProp="name"
      />
      <meta
        content="https://realty.yandex.ru"
        itemProp="url"
      />
      <meta
        alt="Яндекс.Недвижимость"
        itemProp="logo"
        src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
      />
      <meta
        content="Круглосуточно"
        itemProp="openingHours"
      />
      <meta
        content="8 (800) 511-05-59"
        itemProp="telephone"
      />
    </div>
  </Memo(OrganizationComponent)>,
  <Memo(ProductComponent)
    aggregateRating={
      Object {
        "bestRating": 5,
        "ratingValue": 4.8,
        "reviewCount": 115900,
        "reviewedName": "Рейтинг сайта",
      }
    }
  />,
]
`;

exports[`обычная страница без доп условий 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Organization\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"url\\":\\"https://realty.yandex.ru\\",\\"logo\\":\\"https://realty.yandex.ru/apple-touch-icon-192x192.png\\",\\"telephone\\":\\"8 (800) 511-05-59\\",\\"sameAs\\":[\\"https://vk.com/yandex.realty\\",\\"https://ok.ru/realty.yandex\\"],\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"reviewCount\\":115900,\\"bestRating\\":5}}",
      }
    }
    key="0"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SoftwareApplication\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"operatingSystem\\":\\"IOS\\",\\"applicationCategory\\":\\"https://schema.org/BusinessApplication\\",\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"ratingCount\\":115954}}",
      }
    }
    key="1"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SoftwareApplication\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"operatingSystem\\":\\"Android\\",\\"applicationCategory\\":\\"https://schema.org/BusinessApplication\\",\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.3,\\"ratingCount\\":19273}}",
      }
    }
    key="2"
    type="application/ld+json"
  />,
  <Memo(OrganizationComponent)
    excludeAddress={true}
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Organization"
    >
      <meta
        content="Яндекс.Недвижимость"
        itemProp="name"
      />
      <meta
        content="https://realty.yandex.ru"
        itemProp="url"
      />
      <meta
        alt="Яндекс.Недвижимость"
        itemProp="logo"
        src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
      />
      <meta
        content="Круглосуточно"
        itemProp="openingHours"
      />
      <meta
        content="8 (800) 511-05-59"
        itemProp="telephone"
      />
    </div>
  </Memo(OrganizationComponent)>,
  <Memo(ProductComponent)
    aggregateRating={
      Object {
        "bestRating": 5,
        "ratingValue": 4.8,
        "reviewCount": 115900,
        "reviewedName": "Рейтинг сайта",
      }
    }
  />,
]
`;

exports[`страница Newbuilding 0 офферов 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Organization\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"url\\":\\"https://realty.yandex.ru\\",\\"logo\\":\\"https://realty.yandex.ru/apple-touch-icon-192x192.png\\",\\"telephone\\":\\"8 (800) 511-05-59\\",\\"sameAs\\":[\\"https://vk.com/yandex.realty\\",\\"https://ok.ru/realty.yandex\\"]}",
      }
    }
    key="0"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Product\\",\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"bestRating\\":5,\\"ratingValue\\":4.3,\\"reviewCount\\":602,\\"itemReviewed\\":{\\"@type\\":\\"Thing\\",\\"name\\":\\"Отзывы о ЖК «Октябрьское поле»\\"}},\\"brand\\":\\"Застройщик РГ-Девелопмент\\",\\"description\\":\\"Проект, общей площадью 188 тыс. кв. м.\\",\\"image\\":[\\"//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large\\",\\"//avatars.mds.yandex.net/get-verba/216201/2a000001730e6b80f572e2dc76c1cbea7b05/realty_large\\"],\\"name\\":\\"ЖК «Октябрьское поле»\\",\\"offers\\":{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"AggregateOffer\\",\\"highPrice\\":39270000,\\"lowPrice\\":9324250,\\"offerCount\\":0,\\"priceCurrency\\":\\"RUR\\",\\"availability\\":\\"https://schema.org/OutOfStock\\"},\\"review\\":[{\\"@type\\":\\"Review\\",\\"name\\":\\"Отзывы о ЖК\\",\\"datePublished\\":\\"2020-08-04T15:14:35.498Z\\",\\"reviewBody\\":\\"Мне прям очень понравилось\\",\\"author\\":{\\"@type\\":\\"Person\\",\\"name\\":\\"Vasya Pupkin\\"},\\"reviewRating\\":{\\"@type\\":\\"Rating\\",\\"ratingValue\\":5}},{\\"@type\\":\\"Review\\",\\"name\\":\\"Отзывы о ЖК\\",\\"datePublished\\":\\"2020-04-04T15:14:35.498Z\\",\\"reviewBody\\":\\"Очень плохой отзыв!\\",\\"author\\":{\\"@type\\":\\"Person\\",\\"name\\":\\"Vasya Ivanov\\"},\\"reviewRating\\":{\\"@type\\":\\"Rating\\",\\"ratingValue\\":1}}],\\"sku\\":\\"189856\\"}",
      }
    }
    key="1"
    type="application/ld+json"
  />,
  <Memo(OrganizationComponent)
    excludeAddress={true}
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Organization"
    >
      <meta
        content="Яндекс.Недвижимость"
        itemProp="name"
      />
      <meta
        content="https://realty.yandex.ru"
        itemProp="url"
      />
      <meta
        alt="Яндекс.Недвижимость"
        itemProp="logo"
        src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
      />
      <meta
        content="Круглосуточно"
        itemProp="openingHours"
      />
      <meta
        content="8 (800) 511-05-59"
        itemProp="telephone"
      />
    </div>
  </Memo(OrganizationComponent)>,
  <Memo(ProductComponent)
    @context="https://schema.org"
    @type="Product"
    aggregateRating={
      Object {
        "@type": "AggregateRating",
        "bestRating": 5,
        "itemReviewed": Object {
          "@type": "Thing",
          "name": "Отзывы о ЖК «Октябрьское поле»",
        },
        "ratingValue": 4.3,
        "reviewCount": 602,
      }
    }
    brand="Застройщик РГ-Девелопмент"
    description="Проект, общей площадью 188 тыс. кв. м."
    image={
      Array [
        "//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large",
        "//avatars.mds.yandex.net/get-verba/216201/2a000001730e6b80f572e2dc76c1cbea7b05/realty_large",
      ]
    }
    name="ЖК «Октябрьское поле»"
    offers={
      Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "availability": "https://schema.org/OutOfStock",
        "highPrice": 39270000,
        "lowPrice": 9324250,
        "offerCount": 0,
        "priceCurrency": "RUR",
      }
    }
    review={
      Array [
        Object {
          "@type": "Review",
          "author": Object {
            "@type": "Person",
            "name": "Vasya Pupkin",
          },
          "datePublished": "2020-08-04T15:14:35.498Z",
          "name": "Отзывы о ЖК",
          "reviewBody": "Мне прям очень понравилось",
          "reviewRating": Object {
            "@type": "Rating",
            "ratingValue": 5,
          },
        },
        Object {
          "@type": "Review",
          "author": Object {
            "@type": "Person",
            "name": "Vasya Ivanov",
          },
          "datePublished": "2020-04-04T15:14:35.498Z",
          "name": "Отзывы о ЖК",
          "reviewBody": "Очень плохой отзыв!",
          "reviewRating": Object {
            "@type": "Rating",
            "ratingValue": 1,
          },
        },
      ]
    }
    sku="189856"
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Product"
    >
      <meta
        content="ЖК «Октябрьское поле»"
        itemProp="name"
      />
      <meta
        content="Проект, общей площадью 188 тыс. кв. м."
        itemProp="description"
      />
      <meta
        content="189856"
        itemProp="sku"
      />
      <div
        itemProp="brand"
        itemScope={true}
        itemType="https://schema.org/Thing"
      >
        <meta
          content="Застройщик РГ-Девелопмент"
          itemProp="name"
        />
      </div>
      <div
        itemProp="aggregateRating"
        itemScope={true}
        itemType="https://schema.org/AggregateRating"
      >
        <meta
          content="5"
          itemProp="bestRating"
        />
        <meta
          content="602"
          itemProp="reviewCount"
        />
        <meta
          content="4.3"
          itemProp="ratingValue"
        />
        <div
          itemProp="itemReviewed"
          itemScope={true}
          itemType="https://schema.org/Thing"
        >
          <meta
            content="Отзывы о ЖК «Октябрьское поле»"
            itemProp="name"
          />
        </div>
      </div>
      <div
        itemProp="image"
        itemScope={true}
        itemType="https://schema.org/ImageObject"
      >
        <link
          content="//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large"
          itemProp="contentUrl"
        />
      </div>
      <div
        itemProp="image"
        itemScope={true}
        itemType="https://schema.org/ImageObject"
      >
        <link
          content="//avatars.mds.yandex.net/get-verba/216201/2a000001730e6b80f572e2dc76c1cbea7b05/realty_large"
          itemProp="contentUrl"
        />
      </div>
      <div
        itemProp="review"
        itemScope={true}
        itemType="https://schema.org/Review"
      >
        <meta
          content="Отзывы о ЖК"
          itemProp="name"
        />
        <meta
          content="2020-08-04T15:14:35.498Z"
          itemProp="datePublished"
        />
        <meta
          content="Мне прям очень понравилось"
          itemProp="reviewBody"
        />
        <div
          itemProp="author"
          itemScope={true}
          itemType="https://schema.org/Person"
        >
          <meta
            content="Vasya Pupkin"
            itemProp="name"
          />
        </div>
        <div
          itemProp="reviewRating"
          itemScope={true}
          itemType="https://schema.org/Rating"
        >
          <meta
            content="5"
            itemProp="ratingValue"
          />
        </div>
      </div>
      <div
        itemProp="review"
        itemScope={true}
        itemType="https://schema.org/Review"
      >
        <meta
          content="Отзывы о ЖК"
          itemProp="name"
        />
        <meta
          content="2020-04-04T15:14:35.498Z"
          itemProp="datePublished"
        />
        <meta
          content="Очень плохой отзыв!"
          itemProp="reviewBody"
        />
        <div
          itemProp="author"
          itemScope={true}
          itemType="https://schema.org/Person"
        >
          <meta
            content="Vasya Ivanov"
            itemProp="name"
          />
        </div>
        <div
          itemProp="reviewRating"
          itemScope={true}
          itemType="https://schema.org/Rating"
        >
          <meta
            content="1"
            itemProp="ratingValue"
          />
        </div>
      </div>
      <div
        itemProp="offers"
        itemScope={true}
        itemType="https://schema.org/AggregateOffer"
      >
        <meta
          content="9324250"
          itemProp="lowPrice"
        />
        <meta
          content="RUR"
          itemProp="priceCurrency"
        />
        <link
          href="https://schema.org/OutOfStock"
          itemProp="availability"
        />
        <meta
          content="39270000"
          itemProp="highPrice"
        />
        <meta
          content="0"
          itemProp="offerCount"
        />
      </div>
    </div>
  </Memo(ProductComponent)>,
]
`;

exports[`страница Newbuilding 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Organization\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"url\\":\\"https://realty.yandex.ru\\",\\"logo\\":\\"https://realty.yandex.ru/apple-touch-icon-192x192.png\\",\\"telephone\\":\\"8 (800) 511-05-59\\",\\"sameAs\\":[\\"https://vk.com/yandex.realty\\",\\"https://ok.ru/realty.yandex\\"]}",
      }
    }
    key="0"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Product\\",\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"bestRating\\":5,\\"ratingValue\\":4.3,\\"reviewCount\\":602,\\"itemReviewed\\":{\\"@type\\":\\"Thing\\",\\"name\\":\\"Отзывы о ЖК «Октябрьское поле»\\"}},\\"brand\\":\\"Застройщик РГ-Девелопмент\\",\\"description\\":\\"Проект, общей площадью 188 тыс. кв. м.\\",\\"image\\":[\\"//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large\\",\\"//avatars.mds.yandex.net/get-verba/216201/2a000001730e6b80f572e2dc76c1cbea7b05/realty_large\\"],\\"name\\":\\"ЖК «Октябрьское поле»\\",\\"offers\\":{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"AggregateOffer\\",\\"highPrice\\":39270000,\\"lowPrice\\":9324250,\\"offerCount\\":12,\\"priceCurrency\\":\\"RUR\\",\\"availability\\":\\"https://schema.org/InStock\\"},\\"review\\":[{\\"@type\\":\\"Review\\",\\"name\\":\\"Отзывы о ЖК\\",\\"datePublished\\":\\"2020-08-04T15:14:35.498Z\\",\\"reviewBody\\":\\"Мне прям очень понравилось\\",\\"author\\":{\\"@type\\":\\"Person\\",\\"name\\":\\"Vasya Pupkin\\"},\\"reviewRating\\":{\\"@type\\":\\"Rating\\",\\"ratingValue\\":5}},{\\"@type\\":\\"Review\\",\\"name\\":\\"Отзывы о ЖК\\",\\"datePublished\\":\\"2020-04-04T15:14:35.498Z\\",\\"reviewBody\\":\\"Очень плохой отзыв!\\",\\"author\\":{\\"@type\\":\\"Person\\",\\"name\\":\\"Vasya Ivanov\\"},\\"reviewRating\\":{\\"@type\\":\\"Rating\\",\\"ratingValue\\":1}}],\\"sku\\":\\"189856\\"}",
      }
    }
    key="1"
    type="application/ld+json"
  />,
  <Memo(OrganizationComponent)
    excludeAddress={true}
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Organization"
    >
      <meta
        content="Яндекс.Недвижимость"
        itemProp="name"
      />
      <meta
        content="https://realty.yandex.ru"
        itemProp="url"
      />
      <meta
        alt="Яндекс.Недвижимость"
        itemProp="logo"
        src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
      />
      <meta
        content="Круглосуточно"
        itemProp="openingHours"
      />
      <meta
        content="8 (800) 511-05-59"
        itemProp="telephone"
      />
    </div>
  </Memo(OrganizationComponent)>,
  <Memo(ProductComponent)
    @context="https://schema.org"
    @type="Product"
    aggregateRating={
      Object {
        "@type": "AggregateRating",
        "bestRating": 5,
        "itemReviewed": Object {
          "@type": "Thing",
          "name": "Отзывы о ЖК «Октябрьское поле»",
        },
        "ratingValue": 4.3,
        "reviewCount": 602,
      }
    }
    brand="Застройщик РГ-Девелопмент"
    description="Проект, общей площадью 188 тыс. кв. м."
    image={
      Array [
        "//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large",
        "//avatars.mds.yandex.net/get-verba/216201/2a000001730e6b80f572e2dc76c1cbea7b05/realty_large",
      ]
    }
    name="ЖК «Октябрьское поле»"
    offers={
      Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "availability": "https://schema.org/InStock",
        "highPrice": 39270000,
        "lowPrice": 9324250,
        "offerCount": 12,
        "priceCurrency": "RUR",
      }
    }
    review={
      Array [
        Object {
          "@type": "Review",
          "author": Object {
            "@type": "Person",
            "name": "Vasya Pupkin",
          },
          "datePublished": "2020-08-04T15:14:35.498Z",
          "name": "Отзывы о ЖК",
          "reviewBody": "Мне прям очень понравилось",
          "reviewRating": Object {
            "@type": "Rating",
            "ratingValue": 5,
          },
        },
        Object {
          "@type": "Review",
          "author": Object {
            "@type": "Person",
            "name": "Vasya Ivanov",
          },
          "datePublished": "2020-04-04T15:14:35.498Z",
          "name": "Отзывы о ЖК",
          "reviewBody": "Очень плохой отзыв!",
          "reviewRating": Object {
            "@type": "Rating",
            "ratingValue": 1,
          },
        },
      ]
    }
    sku="189856"
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Product"
    >
      <meta
        content="ЖК «Октябрьское поле»"
        itemProp="name"
      />
      <meta
        content="Проект, общей площадью 188 тыс. кв. м."
        itemProp="description"
      />
      <meta
        content="189856"
        itemProp="sku"
      />
      <div
        itemProp="brand"
        itemScope={true}
        itemType="https://schema.org/Thing"
      >
        <meta
          content="Застройщик РГ-Девелопмент"
          itemProp="name"
        />
      </div>
      <div
        itemProp="aggregateRating"
        itemScope={true}
        itemType="https://schema.org/AggregateRating"
      >
        <meta
          content="5"
          itemProp="bestRating"
        />
        <meta
          content="602"
          itemProp="reviewCount"
        />
        <meta
          content="4.3"
          itemProp="ratingValue"
        />
        <div
          itemProp="itemReviewed"
          itemScope={true}
          itemType="https://schema.org/Thing"
        >
          <meta
            content="Отзывы о ЖК «Октябрьское поле»"
            itemProp="name"
          />
        </div>
      </div>
      <div
        itemProp="image"
        itemScope={true}
        itemType="https://schema.org/ImageObject"
      >
        <link
          content="//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large"
          itemProp="contentUrl"
        />
      </div>
      <div
        itemProp="image"
        itemScope={true}
        itemType="https://schema.org/ImageObject"
      >
        <link
          content="//avatars.mds.yandex.net/get-verba/216201/2a000001730e6b80f572e2dc76c1cbea7b05/realty_large"
          itemProp="contentUrl"
        />
      </div>
      <div
        itemProp="review"
        itemScope={true}
        itemType="https://schema.org/Review"
      >
        <meta
          content="Отзывы о ЖК"
          itemProp="name"
        />
        <meta
          content="2020-08-04T15:14:35.498Z"
          itemProp="datePublished"
        />
        <meta
          content="Мне прям очень понравилось"
          itemProp="reviewBody"
        />
        <div
          itemProp="author"
          itemScope={true}
          itemType="https://schema.org/Person"
        >
          <meta
            content="Vasya Pupkin"
            itemProp="name"
          />
        </div>
        <div
          itemProp="reviewRating"
          itemScope={true}
          itemType="https://schema.org/Rating"
        >
          <meta
            content="5"
            itemProp="ratingValue"
          />
        </div>
      </div>
      <div
        itemProp="review"
        itemScope={true}
        itemType="https://schema.org/Review"
      >
        <meta
          content="Отзывы о ЖК"
          itemProp="name"
        />
        <meta
          content="2020-04-04T15:14:35.498Z"
          itemProp="datePublished"
        />
        <meta
          content="Очень плохой отзыв!"
          itemProp="reviewBody"
        />
        <div
          itemProp="author"
          itemScope={true}
          itemType="https://schema.org/Person"
        >
          <meta
            content="Vasya Ivanov"
            itemProp="name"
          />
        </div>
        <div
          itemProp="reviewRating"
          itemScope={true}
          itemType="https://schema.org/Rating"
        >
          <meta
            content="1"
            itemProp="ratingValue"
          />
        </div>
      </div>
      <div
        itemProp="offers"
        itemScope={true}
        itemType="https://schema.org/AggregateOffer"
      >
        <meta
          content="9324250"
          itemProp="lowPrice"
        />
        <meta
          content="RUR"
          itemProp="priceCurrency"
        />
        <link
          href="https://schema.org/InStock"
          itemProp="availability"
        />
        <meta
          content="39270000"
          itemProp="highPrice"
        />
        <meta
          content="12"
          itemProp="offerCount"
        />
      </div>
    </div>
  </Memo(ProductComponent)>,
]
`;

exports[`страница Offer 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Organization\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"url\\":\\"https://realty.yandex.ru\\",\\"logo\\":\\"https://realty.yandex.ru/apple-touch-icon-192x192.png\\",\\"telephone\\":\\"8 (800) 511-05-59\\",\\"sameAs\\":[\\"https://vk.com/yandex.realty\\",\\"https://ok.ru/realty.yandex\\"],\\"address\\":{\\"@type\\":\\"PostalAddress\\",\\"streetAddress\\":\\"Садовническая ул., 82, с2\\",\\"addressLocality\\":\\"Москва\\",\\"postalCode\\":\\"115035\\"},\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"reviewCount\\":115900,\\"bestRating\\":5}}",
      }
    }
    key="0"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Product\\",\\"name\\":\\"Купить квартиру по адресу Москва, улица Верхняя Масловка, 25к1 - id 1241421512412 - по цене 2,3 млн руб. на Яндекс.Недвижимости\\",\\"description\\":\\"Купить квартиру - id 1241421512412 - по цене 141 414 ₽ . Фото, транспортная доступность, инфраструктура и подробная информация об объекте.\\",\\"category\\":\\"APARTMENT\\",\\"sku\\":\\"1241421512412\\",\\"offers\\":{\\"@type\\":\\"Offer\\",\\"price\\":2300000,\\"priceCurrency\\":\\"RUR\\",\\"url\\":\\"//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large\\",\\"availability\\":\\"https://schema.org/InStock\\"}}",
      }
    }
    key="1"
    type="application/ld+json"
  />,
  <Memo(OrganizationComponent)
    excludeAddress={false}
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Organization"
    >
      <meta
        content="Яндекс.Недвижимость"
        itemProp="name"
      />
      <meta
        content="https://realty.yandex.ru"
        itemProp="url"
      />
      <meta
        alt="Яндекс.Недвижимость"
        itemProp="logo"
        src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
      />
      <div
        itemProp="address"
        itemScope={true}
        itemType="https://schema.org/PostalAddress"
      >
        <meta
          content="Садовническая ул., 82, с2"
          itemProp="streetAddress"
        />
        <meta
          content="Москва"
          itemProp="addressLocality"
        />
        <meta
          content="115035"
          itemProp="postalCode"
        />
      </div>
      <meta
        content="Круглосуточно"
        itemProp="openingHours"
      />
      <meta
        content="8 (800) 511-05-59"
        itemProp="telephone"
      />
    </div>
  </Memo(OrganizationComponent)>,
  <Memo(ProductComponent)
    @context="https://schema.org"
    @type="Product"
    aggregateRating={
      Object {
        "bestRating": 5,
        "ratingValue": 4.8,
        "reviewCount": 115900,
        "reviewedName": "Рейтинг сайта",
      }
    }
    category="APARTMENT"
    description="Купить квартиру - id 1241421512412 - по цене 141 414 ₽ . Фото, транспортная доступность, инфраструктура и подробная информация об объекте."
    name="Купить квартиру по адресу Москва, улица Верхняя Масловка, 25к1 - id 1241421512412 - по цене 2,3 млн руб. на Яндекс.Недвижимости"
    offers={
      Object {
        "@type": "Offer",
        "availability": "https://schema.org/InStock",
        "price": 2300000,
        "priceCurrency": "RUR",
        "url": "//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large",
      }
    }
    sku="1241421512412"
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Product"
    >
      <meta
        content="Купить квартиру по адресу Москва, улица Верхняя Масловка, 25к1 - id 1241421512412 - по цене 2,3 млн руб. на Яндекс.Недвижимости"
        itemProp="name"
      />
      <meta
        content="Купить квартиру - id 1241421512412 - по цене 141 414 ₽ . Фото, транспортная доступность, инфраструктура и подробная информация об объекте."
        itemProp="description"
      />
      <meta
        content="1241421512412"
        itemProp="sku"
      />
      <div
        itemProp="aggregateRating"
        itemScope={true}
        itemType="https://schema.org/AggregateRating"
      >
        <meta
          content="5"
          itemProp="bestRating"
        />
        <meta
          content="115900"
          itemProp="reviewCount"
        />
        <meta
          content="4.8"
          itemProp="ratingValue"
        />
      </div>
      <div
        itemProp="offers"
        itemScope={true}
        itemType="https://schema.org/Offer"
      >
        <meta
          content="2300000"
          itemProp="price"
        />
        <meta
          content="RUR"
          itemProp="priceCurrency"
        />
        <meta
          content="//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large"
          itemProp="url"
        />
        <link
          href="https://schema.org/InStock"
          itemProp="availability"
        />
        <meta
          content="1241421512412"
          itemProp="sku"
        />
      </div>
    </div>
  </Memo(ProductComponent)>,
]
`;

exports[`страница Offer. Неактивный оффер 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Organization\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"url\\":\\"https://realty.yandex.ru\\",\\"logo\\":\\"https://realty.yandex.ru/apple-touch-icon-192x192.png\\",\\"telephone\\":\\"8 (800) 511-05-59\\",\\"sameAs\\":[\\"https://vk.com/yandex.realty\\",\\"https://ok.ru/realty.yandex\\"],\\"address\\":{\\"@type\\":\\"PostalAddress\\",\\"streetAddress\\":\\"Садовническая ул., 82, с2\\",\\"addressLocality\\":\\"Москва\\",\\"postalCode\\":\\"115035\\"},\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"reviewCount\\":115900,\\"bestRating\\":5}}",
      }
    }
    key="0"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Product\\",\\"name\\":\\"Купить квартиру по адресу Москва, улица Верхняя Масловка, 25к1 - id 1241421512412 - по цене 2,3 млн руб. на Яндекс.Недвижимости\\",\\"description\\":\\"Купить квартиру - id 1241421512412 - по цене 141 414 ₽ . Фото, транспортная доступность, инфраструктура и подробная информация об объекте.\\",\\"category\\":\\"APARTMENT\\",\\"sku\\":\\"1241421512412\\",\\"offers\\":{\\"@type\\":\\"Offer\\",\\"price\\":2300000,\\"priceCurrency\\":\\"RUR\\",\\"url\\":\\"//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large\\",\\"availability\\":\\"https://schema.org/OutOfStock\\"}}",
      }
    }
    key="1"
    type="application/ld+json"
  />,
  <Memo(OrganizationComponent)
    excludeAddress={false}
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Organization"
    >
      <meta
        content="Яндекс.Недвижимость"
        itemProp="name"
      />
      <meta
        content="https://realty.yandex.ru"
        itemProp="url"
      />
      <meta
        alt="Яндекс.Недвижимость"
        itemProp="logo"
        src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
      />
      <div
        itemProp="address"
        itemScope={true}
        itemType="https://schema.org/PostalAddress"
      >
        <meta
          content="Садовническая ул., 82, с2"
          itemProp="streetAddress"
        />
        <meta
          content="Москва"
          itemProp="addressLocality"
        />
        <meta
          content="115035"
          itemProp="postalCode"
        />
      </div>
      <meta
        content="Круглосуточно"
        itemProp="openingHours"
      />
      <meta
        content="8 (800) 511-05-59"
        itemProp="telephone"
      />
    </div>
  </Memo(OrganizationComponent)>,
  <Memo(ProductComponent)
    @context="https://schema.org"
    @type="Product"
    aggregateRating={
      Object {
        "bestRating": 5,
        "ratingValue": 4.8,
        "reviewCount": 115900,
        "reviewedName": "Рейтинг сайта",
      }
    }
    category="APARTMENT"
    description="Купить квартиру - id 1241421512412 - по цене 141 414 ₽ . Фото, транспортная доступность, инфраструктура и подробная информация об объекте."
    name="Купить квартиру по адресу Москва, улица Верхняя Масловка, 25к1 - id 1241421512412 - по цене 2,3 млн руб. на Яндекс.Недвижимости"
    offers={
      Object {
        "@type": "Offer",
        "availability": "https://schema.org/OutOfStock",
        "price": 2300000,
        "priceCurrency": "RUR",
        "url": "//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large",
      }
    }
    sku="1241421512412"
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Product"
    >
      <meta
        content="Купить квартиру по адресу Москва, улица Верхняя Масловка, 25к1 - id 1241421512412 - по цене 2,3 млн руб. на Яндекс.Недвижимости"
        itemProp="name"
      />
      <meta
        content="Купить квартиру - id 1241421512412 - по цене 141 414 ₽ . Фото, транспортная доступность, инфраструктура и подробная информация об объекте."
        itemProp="description"
      />
      <meta
        content="1241421512412"
        itemProp="sku"
      />
      <div
        itemProp="aggregateRating"
        itemScope={true}
        itemType="https://schema.org/AggregateRating"
      >
        <meta
          content="5"
          itemProp="bestRating"
        />
        <meta
          content="115900"
          itemProp="reviewCount"
        />
        <meta
          content="4.8"
          itemProp="ratingValue"
        />
      </div>
      <div
        itemProp="offers"
        itemScope={true}
        itemType="https://schema.org/Offer"
      >
        <meta
          content="2300000"
          itemProp="price"
        />
        <meta
          content="RUR"
          itemProp="priceCurrency"
        />
        <meta
          content="//avatars.mds.yandex.net/get-verba/1672712/2a000001730e6b37eda3c893c05ac71a5854/realty_large"
          itemProp="url"
        />
        <link
          href="https://schema.org/OutOfStock"
          itemProp="availability"
        />
        <meta
          content="1241421512412"
          itemProp="sku"
        />
      </div>
    </div>
  </Memo(ProductComponent)>,
]
`;

exports[`страница Search 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Organization\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"url\\":\\"https://realty.yandex.ru\\",\\"logo\\":\\"https://realty.yandex.ru/apple-touch-icon-192x192.png\\",\\"telephone\\":\\"8 (800) 511-05-59\\",\\"sameAs\\":[\\"https://vk.com/yandex.realty\\",\\"https://ok.ru/realty.yandex\\"],\\"address\\":{\\"@type\\":\\"PostalAddress\\",\\"streetAddress\\":\\"Садовническая ул., 82, с2\\",\\"addressLocality\\":\\"Москва\\",\\"postalCode\\":\\"115035\\"},\\"aggregateRating\\":{\\"@type\\":\\"AggregateRating\\",\\"ratingValue\\":4.8,\\"reviewCount\\":115900,\\"bestRating\\":5}}",
      }
    }
    key="0"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Product\\",\\"name\\":\\"квартиру в Москве и МО\\",\\"description\\":\\"Подбор по параметрам актуальных объявлений о продаже и аренде квартир, домов и комнат, адреса на карте города\\",\\"offers\\":{\\"@type\\":\\"AggregateOffer\\",\\"lowPrice\\":2300000,\\"highPrice\\":12000000,\\"offerCount\\":4,\\"priceCurrency\\":\\"RUR\\"}}",
      }
    }
    key="1"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SaleEvent\\",\\"name\\":\\"🔔 Чаты с собственником\\",\\"description\\":\\"Чаты с собственником в приложении\\",\\"startDate\\":\\"2021-12-01T21:00:00+03:00\\",\\"endDate\\":\\"2022-02-01T21:00:00+03:00\\",\\"location\\":{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Place\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"address\\":{\\"@type\\":\\"PostalAddress\\",\\"streetAddress\\":\\"Садовническая ул., 82, с2\\",\\"addressLocality\\":\\"Москва\\",\\"postalCode\\":\\"115035\\"}}}",
      }
    }
    key="2"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SaleEvent\\",\\"name\\":\\"🔔 Онлайн показ\\",\\"description\\":\\"Безопасный онлайн показ\\",\\"startDate\\":\\"2021-12-01T21:00:00+03:00\\",\\"endDate\\":\\"2022-02-01T21:00:00+03:00\\",\\"location\\":{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Place\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"address\\":{\\"@type\\":\\"PostalAddress\\",\\"streetAddress\\":\\"Садовническая ул., 82, с2\\",\\"addressLocality\\":\\"Москва\\",\\"postalCode\\":\\"115035\\"}}}",
      }
    }
    key="3"
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"SaleEvent\\",\\"name\\":\\"🔔 Видеообзоры\\",\\"description\\":\\"Видеообзоры квартир\\",\\"startDate\\":\\"2021-12-01T21:00:00+03:00\\",\\"endDate\\":\\"2022-02-01T21:00:00+03:00\\",\\"location\\":{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Place\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"address\\":{\\"@type\\":\\"PostalAddress\\",\\"streetAddress\\":\\"Садовническая ул., 82, с2\\",\\"addressLocality\\":\\"Москва\\",\\"postalCode\\":\\"115035\\"}}}",
      }
    }
    key="4"
    type="application/ld+json"
  />,
  <Memo(OrganizationComponent)
    excludeAddress={false}
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Organization"
    >
      <meta
        content="Яндекс.Недвижимость"
        itemProp="name"
      />
      <meta
        content="https://realty.yandex.ru"
        itemProp="url"
      />
      <meta
        alt="Яндекс.Недвижимость"
        itemProp="logo"
        src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
      />
      <div
        itemProp="address"
        itemScope={true}
        itemType="https://schema.org/PostalAddress"
      >
        <meta
          content="Садовническая ул., 82, с2"
          itemProp="streetAddress"
        />
        <meta
          content="Москва"
          itemProp="addressLocality"
        />
        <meta
          content="115035"
          itemProp="postalCode"
        />
      </div>
      <meta
        content="Круглосуточно"
        itemProp="openingHours"
      />
      <meta
        content="8 (800) 511-05-59"
        itemProp="telephone"
      />
    </div>
  </Memo(OrganizationComponent)>,
  <Memo(ProductComponent)
    @context="https://schema.org"
    @type="Product"
    aggregateRating={
      Object {
        "bestRating": 5,
        "ratingValue": 4.8,
        "reviewCount": 115900,
        "reviewedName": "Рейтинг сайта",
      }
    }
    description="Подбор по параметрам актуальных объявлений о продаже и аренде квартир, домов и комнат, адреса на карте города"
    name="квартиру в Москве и МО"
    offers={
      Object {
        "@type": "AggregateOffer",
        "highPrice": 12000000,
        "lowPrice": 2300000,
        "offerCount": 4,
        "priceCurrency": "RUR",
      }
    }
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Product"
    >
      <meta
        content="квартиру в Москве и МО"
        itemProp="name"
      />
      <meta
        content="Подбор по параметрам актуальных объявлений о продаже и аренде квартир, домов и комнат, адреса на карте города"
        itemProp="description"
      />
      <div
        itemProp="aggregateRating"
        itemScope={true}
        itemType="https://schema.org/AggregateRating"
      >
        <meta
          content="5"
          itemProp="bestRating"
        />
        <meta
          content="115900"
          itemProp="reviewCount"
        />
        <meta
          content="4.8"
          itemProp="ratingValue"
        />
      </div>
      <div
        itemProp="offers"
        itemScope={true}
        itemType="https://schema.org/AggregateOffer"
      >
        <meta
          content="2300000"
          itemProp="lowPrice"
        />
        <meta
          content="RUR"
          itemProp="priceCurrency"
        />
        <meta
          content="12000000"
          itemProp="highPrice"
        />
        <meta
          content="4"
          itemProp="offerCount"
        />
      </div>
    </div>
  </Memo(ProductComponent)>,
]
`;

exports[`страница с исключением websiteRating 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"https://schema.org\\",\\"@type\\":\\"Organization\\",\\"name\\":\\"Яндекс.Недвижимость\\",\\"url\\":\\"https://realty.yandex.ru\\",\\"logo\\":\\"https://realty.yandex.ru/apple-touch-icon-192x192.png\\",\\"telephone\\":\\"8 (800) 511-05-59\\",\\"sameAs\\":[\\"https://vk.com/yandex.realty\\",\\"https://ok.ru/realty.yandex\\"]}",
      }
    }
    key="0"
    type="application/ld+json"
  />,
  <Memo(OrganizationComponent)
    excludeAddress={true}
  >
    <div
      itemScope={true}
      itemType="https://schema.org/Organization"
    >
      <meta
        content="Яндекс.Недвижимость"
        itemProp="name"
      />
      <meta
        content="https://realty.yandex.ru"
        itemProp="url"
      />
      <meta
        alt="Яндекс.Недвижимость"
        itemProp="logo"
        src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
      />
      <meta
        content="Круглосуточно"
        itemProp="openingHours"
      />
      <meta
        content="8 (800) 511-05-59"
        itemProp="telephone"
      />
    </div>
  </Memo(OrganizationComponent)>,
  <Memo(ProductComponent) />,
]
`;
